--- a/views/programsAndEvents.ejs
+++ b/views/programsAndEvents.ejs
@@ -118,15 +118,15 @@
                 </li>
 
                 <!-- -----------------------------------------------Second Card-------------------------------------------------------- -->
-                <li class="booking-card" style="background-image: url(https://i.pinimg.com/236x/f1/3c/c8/f13cc814cdd75ea305a83c2f9f6672a1.jpg)">
+                <li class="booking-card" style="background-image: url(https://www.jagranimages.com/images/newimg/18022020/18_02_2020-sukanya_20041181.jpg)">
                     <div class="book-container">
                       <div class="content">
-                          <a href="https://rmk.nic.in/" target="_blank"><button class="btn">Visit Website</button></a>
+                          <a href="https://wcd.nic.in/bbbp-schemes" target="_blank"><button class="btn">Visit Website</button></a>
                       </div>
                     </div>
                     <div class="informations-container">
-                      <h2 class="title">Rashtriya Mahila Kosh</h2>
-                      <p class="sub-title">A  national  level  organization for socio-economic empowerment  of  women</p>
+                      <h2 class="title">Beti Bachao Beti Padhao</h2>
+                      <p class="sub-title">It aims at prevention of gender biased sex selective elimination</p>
                       <div class="more-information">
                         <div class="info-and-date-container">
                           <div class="box info">
@@ -135,25 +135,25 @@
                           </div>
                           <div class="box date">
                               <i class="fa fa-calendar" aria-hidden="true"></i>
-                            <p>Since March 1993</p>
+                            <p>Since January 2015</p>
                           </div>
                         </div>
-                        <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward
-                             and forward linkages for women in the unorganized sector</p>
+                        <p class="disclaimer">Its mission is to ensure survival & protection of the girl child
+                          It also aims at ensuring education and participation of the girl child</p>
                         </div>
                     </div>
                   </li>
 
                   <!-- -----------------------------------------------Third Card-------------------------------------------------------- -->
-                <li class="booking-card" style="background-image: url(https://i.pinimg.com/236x/f1/3c/c8/f13cc814cdd75ea305a83c2f9f6672a1.jpg)">
+                <li class="booking-card" style="background-image: url(https://www.edristi.in/wp-content/uploads/2015/10/swadhar.jpg)">
                     <div class="book-container">
                       <div class="content">
-                          <a href="https://rmk.nic.in/" target="_blank"><button class="btn">Visit Website</button></a>
+                          <a href="https://www.india.gov.in/spotlight/swadhar-greh-scheme" target="_blank"><button class="btn">Visit Website</button></a>
                       </div>
                     </div>
                     <div class="informations-container">
-                      <h2 class="title">Rashtriya Mahila Kosh</h2>
-                      <p class="sub-title">A  national  level  organization for socio-economic empowerment  of  women</p>
+                      <h2 class="title">Swadhar Greh</h2>
+                      <p class="sub-title">A Scheme for Women in Difficult Circumstances</p>
                       <div class="more-information">
                         <div class="info-and-date-container">
                           <div class="box info">
@@ -162,25 +162,25 @@
                           </div>
                           <div class="box date">
                               <i class="fa fa-calendar" aria-hidden="true"></i>
-                            <p>Since March 1993</p>
+                            <p>Since June 2010</p>
                           </div>
                         </div>
-                        <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward
-                             and forward linkages for women in the unorganized sector</p>
+                        <p class="disclaimer">Its mission is to cater to the primary need of shelter, food, clothing, 
+                          medical treatment and care of the women in distress and who are without any social and economic support.</p>
                         </div>
                     </div>
                   </li>
 
                   <!-- -----------------------------------------------Fourth Card-------------------------------------------------------- -->
-                <li class="booking-card" style="background-image: url(https://i.pinimg.com/236x/f1/3c/c8/f13cc814cdd75ea305a83c2f9f6672a1.jpg)">
+                <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
                     <div class="book-container">
                       <div class="content">
-                          <a href="https://rmk.nic.in/" target="_blank"><button class="btn">Visit Website</button></a>
+                          <a href="https://wcd.nic.in/schemes/ujjawala-comprehensive-scheme-prevention-trafficking-and-rescue-rehabilitation-and-re" target="_blank"><button class="btn">Visit Website</button></a>
                       </div>
                     </div>
                     <div class="informations-container">
-                      <h2 class="title">Rashtriya Mahila Kosh</h2>
-                      <p class="sub-title">A  national  level  organization for socio-economic empowerment  of  women</p>
+                      <h2 class="title">UJJAWALA</h2>
+                      <p class="sub-title">A Comprehensive Scheme for Prevention of trafficking and Rescue</p>
                       <div class="more-information">
                         <div class="info-and-date-container">
                           <div class="box info">
@@ -189,11 +189,11 @@
                           </div>
                           <div class="box date">
                               <i class="fa fa-calendar" aria-hidden="true"></i>
-                            <p>Since March 1993</p>
+                            <p>Since November 2012</p>
                           </div>
                         </div>
-                        <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward
-                             and forward linkages for women in the unorganized sector</p>
+                        <p class="disclaimer">It aims at prevention of trafficking and rescue,
+                           rehabilitation and re-integration of victims of trafficking and commercial sexual exploitation</p>
                         </div>
                     </div>
                   </li>
