--- a/views/programsAndEvents.ejs
+++ b/views/programsAndEvents.ejs
@@ -140,6 +140,9 @@
                         </div>
                         <p class="disclaimer">Its mission is to ensure survival & protection of the girl child
                           It also aims at ensuring education and participation of the girl child</p>
+                        </div>
+                      </div>
+                  </li>
                   <!-- -----------------------------------------------Third Card-------------------------------------------------------- -->
                 <li class="booking-card" style="background-image: url(https://www.edristi.in/wp-content/uploads/2015/10/swadhar.jpg)">
                     <div class="book-container">
@@ -170,7 +173,7 @@
             </li>
 
                   <!-- -----------------------------------------------Fourth Card-------------------------------------------------------- -->
-                <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
+                <!-- <li class="booking-card" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9jE5QFpZT8vydgBk7_LSQzPL2UjyxKx00sQ&usqp=CAU)">
                     <div class="book-container">
                       <div class="content">
                           <a href="https://wcd.nic.in/schemes/ujjawala-comprehensive-scheme-prevention-trafficking-and-rescue-rehabilitation-and-re" target="_blank"><button class="btn">Visit Website</button></a>
@@ -196,7 +199,8 @@
                         <p class="disclaimer">Its mission is to be a single window facilitator for provision of financial services with backward and forward linkages for women in the unorganized sector</p>
                     </div>
                 </div>
-            </li>
+            </li> -->
+            
         </ul>
     </div>
     <!------------------------------------------------Programs page ends here --------------------------------------------------------------- -->
@@ -254,6 +258,8 @@
                     </div>
                 </div>
             </li>
+          </ul>
+            
     </div>
 
     <script>
