--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -69,7 +69,7 @@
                         <a href="/products" class="nav-link">Buy and Sell</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/service" class="nav-link">Buisness</a>
+                        <a href="/service" class="nav-link">Business</a>
                     </li>
                     <li class="nav-item">
                         <a href="/contact" class="nav-link">Contact</a>
