--- a/views/products.ejs
+++ b/views/products.ejs
@@ -25,6 +25,7 @@
             </div>
         </div>
         </div>
+        </div>
     <section id="scroll-target"class=" h-100">
         <div class="container py-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
