--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 <footer class="footer-distributed">
     <div class="footer-left">
         <img class="footlogo" src="/assets/logo.svg">
-        <h3>AatmaNiti<span> Making the Indian Womens Swawlambi</span></h3>
+        <h3>AatmaNiti<span> Making Womens Swawlambi</span></h3>
 
         <p class="footer-links">
             <a href="#">Home</a> |
